gccida/g2/move_deaths
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12353:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v44; // rbp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12358:6: error: use of undeclared identifier 'v49'
rtx *v49; // r8 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12359:6: error: use of undeclared identifier 'v50'
rtx *v50; // r14 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12366:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12366:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12375:6: error: use of undeclared identifier 'v66'
rtx *v66; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12377:6: error: use of undeclared identifier 'v68'
rtx *v68; // r14 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12378:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v69; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12399:6: error: use of undeclared identifier 'v90'
rtx *v90; // [rsp+8h] [rbp-70h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12400:6: error: use of undeclared identifier 'v91'
rtx *v91; // [rsp+8h] [rbp-70h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12401:4: error: expected ';' after expression
rtx note; // [rsp+10h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12401:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+10h] [rbp-68h] 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12405:4: error: expected ';' after expression
rtx v96; // [rsp+18h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12405:5: error: use of undeclared identifier 'v96'
rtx v96; // [rsp+18h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12408:6: error: use of undeclared identifier 'after_dead'
rtx *after_dead; // [rsp+20h] [rbp-58h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12409:4: error: expected ';' after expression
rtx after_deada; // [rsp+20h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12409:5: error: use of undeclared identifier 'after_deada'
rtx after_deada; // [rsp+20h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12410:4: error: expected ';' after expression
rtx after_deadb; // [rsp+20h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/combine.c:12410:5: error: use of undeclared identifier 'after_deadb'
rtx after_deadb; // [rsp+20h] [rbp-58h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_deaths/src/obj/combine.o] Error 1
